GGB-2475 merge in new parser/atoms/boxes from jlm2
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@64471 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e